--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!--Main Layout-->
     <main class="container">
         <!--Sidebar-->
-        <aside class="sidebar" aria-labelledby="profile-heading">
+        <aside class="sidebar reveal" aria-labelledby="profile-heading">
             <section class="profile-card">
                 <div class="profile-media">
                     <img class="image" src="Profile.jpg" alt="Profile"/>
@@ -122,7 +122,7 @@
                 <p class="lead"> Passionate about creating engaging user experiences and specializing in transforming ideas into beautifully created end products.</p>
        
 
-            <div class="feature-grid">
+            <div class="feature-grid reveal">
                 <div class="card orange">
                     <h3 class="problem-shadow">PROBLEM</h3>
                 </div>
@@ -144,7 +144,7 @@
                 <span class="ghost">SECTION</span>
             </h3>
 
-            <div class="bio-section">
+            <div class="bio-section reveal">
                 <p class="boxing">I am an Electrical and Computer Engineering student at The Ohio State University with a minor in Business, focused on building 
                     practical engineering solutions. I have participated in OHI/O hackathons, 
                     working with teams to develop solutions under real-world constraints. Courses such as 
@@ -178,7 +178,7 @@
             </h4>
 
             <div class="projects-grid">
-             <div class="project-one">
+             <div class="project-one reveal">
                 <h3 class="project-header">PERSONAL PORTFOLIO WEBPAGE</h3>
                 <p class="paragraph">
                   This personal portfolio website was designed and built from scratch to 
@@ -230,7 +230,7 @@
             </h2>
 
             <div class="contact-grid">
-                 <p class="contact-email">patelrudhra28@gmail.com</p>
+                 <p class="contact-email reveal">patelrudhra28@gmail.com</p>
             </div>
 
              <hr class="contact-divider">
